--- a/technical-documentation-page/style.css
+++ b/technical-documentation-page/style.css
@@ -29,7 +29,7 @@
     top: 0;
     width: 100%;
     clear: left;
-    height: 30%;
+    height: 30vh;
   }
 }
 
@@ -78,7 +78,7 @@
   #content {
     padding-left: 0;
     margin-right: 0;
-    padding-top: 25em;
+    padding-top: 25vh;
   }
 }
 
